--- a/vite-project/public/index.html
+++ b/vite-project/public/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Professional Portfolio - Full-Stack Developer" />
-    <title>John Doe - Full-Stack Developer</title>
+    <title>Goal-Oriented-Academy</title>
     
     <!-- Preload important fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
